[tool.poetry]
name = "bravepatcher"
license = "MIT"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["maxisoft <maxisoft.eu+github@gmail.com>"]

[tool.poetry.dependencies]
python = "<3.10,>=3.7"
PySimpleGUI = "<5, >=4.32.1"
appdirs = ">=1.4.4"
psutil = ">=5.8.0, <6.0.0"
typer = ">=0.3.2, <0.4.0"

[tool.poetry.scripts]
bravepatcher = "bravepatcher.cli:main"

[tool.poetry.dev-dependencies]
PeachPy = { git = "https://github.com/Maratyszcza/PeachPy" }
Nuitka = "^0.6.11.5"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-xdist = "^2.2.0"
pytest-integration = "^0.2.2"
pefile = "^2019.4.18"
flake8 = "^3.8.4"
flake8-bugbear = "^20.11.1"
flake8-isort = "^4.0.0"
flake8-pep3101 = "^1.3.0"
flake8-fixme = "^1.1.1"
flake8-mutable = "^1.2.0"
bandit = "^1.7.0"
mypy = "^0.800"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
